Implemented code running system that runs a given java program with full timeout and security management